[project]
name = "agent_writer"
version = "0.1.0"
description = "agent-writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
agent_writer = "agent_writer.main:run"
run_crew = "agent_writer.main:run"
train = "agent_writer.main:train"
replay = "agent_writer.main:replay"
test = "agent_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
